--- a/src/components/shopping/shoppingcar.module.css
+++ b/src/components/shopping/shoppingcar.module.css
@@ -42,3 +42,12 @@
         width: 40%;
     }
 }
+
+@media screen and (max-width: 535px) {
+    .cards {
+        width: 50%;
+    }
+    .cards img {
+        height: 130px;
+    }
+}
