--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -60,7 +60,14 @@
     padding: 10px;
 }
 
-.container__cards button {
+.container__card {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 10px;
+}
+
+.container__card button {
     cursor: pointer;
     background-color: white;
     border: none;
@@ -130,6 +137,20 @@
     .cards {
         width: 40%;
     }
+
+    .card {
+        width: 50%;
+        margin-bottom: 10px;
+    }
+
+    .card img {
+        height: 200px;
+    }
+
+    .container__card {
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 @media screen and (max-width: 916px) {
@@ -139,5 +160,20 @@
 
     .img_1 {
         margin-bottom: 10px;
+    }
+}
+
+@media screen and (max-width: 585px) {
+    .card img {
+        height: 150px;
+    }
+}
+
+@media screen and (max-width: 535px) {
+    .cards {
+        width: 50%;
+    }
+    .cards img {
+        height: 130px;
     }
 }
